Fixed crashes during data retrieval for SlurmRunner
Added a small hack that fixed a bug during data retrieval from tasks
that caused the grader to crash due to the use of `config["slurm_use_srun"]=False`.
A small "hack" was used to parse only the result of the "main" job:
the grading script

--- a/grader-config-example.yaml
+++ b/grader-config-example.yaml
@@ -2,6 +2,7 @@ grader:
   working_dir: "/tmp/grader"
   grades_file: "leaderboard.json"
   github_pat: "pat_example_1234567890"
+  sentry_dsn: ""
 
 assignments:
   - name: "vector-sum"
